# SIO-Project1

./: README.md  docker-compose.yml
analysis/: report.md
analysis/videos/: cwe-20.webm  cwe-200.webm  cwe-352.webm  cwe-434.webm  cwe-522.webm  cwe-79.webm  sql_injection.webm
app/: Dockerfile  README.md  pyproject.toml
app/api/: app.py  auth.py  authenticated.py  init_db.py  models.py  unauthenticated.py
app/api/static/css/: animation.css  base.css  cart.css  login.css  order_history.css  profileview.css
app/api/templates/: cart.html  index.html  login.html  orders.html  product.html  products.html  profile.html  profile_edit.html
app_sec/: Dockerfile  README.md
app_sec/api/: app.py  auth.py  authenticated.py  init_db.py  models.py  session.py  unauthenticated.py
app_sec/api/static/css/: base.css  navbar.css  product.css  products.css  profile.css  wishlist.css
app_sec/api/templates/: cart.html  index.html  login.html  navbar.html  orders.html  product.html  products.html  profile.html  profile_edit.html  register.html  test.html  wishlist.html
scam/: scam.html
