[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["LeikRad <oreouser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.2"
flask-login = "0.6.2"
flask-marshmallow = "0.14.0"
flask-sqlalchemy = "3.0.2"
sqlalchemy = "1.4.43"
click = "8.1.3"
flask-wtf = "1.0.1"
greenlet = "2.0.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
marshmallow = "3.19.0"
marshmallow-sqlalchemy = "0.28.1"
packaging = "21.3"
pdfkit = "1.0.0"
pyparsing = "3.0.9"
six = "1.16.0"
werkzeug = "2.2.2"
wtforms = "3.0.1"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
